--- a/WebApoMant/WebApoMant.csproj
+++ b/WebApoMant/WebApoMant.csproj
@@ -110,6 +110,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ConfigurationManagerAppSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
